# realtime-health-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.md (complete rewrite)  SECURITY.md  SETUP_GUIDE.md  about.md  docker-compose.yml  pyproject.toml  pyproject.toml (coverage config)
.automation_state/: run_log.txt
.github/workflows/: ci.yml  daily_commit_automation.yml  docker-build.yml  release.yml  security-scan.yml
configs/: ab_config.yaml  airflow_connections.yaml  alert_rules.yaml  alerting_config.yaml  base_config.yaml  canary_config.yaml  consumer_config.yaml  drift_config.yaml  kafka_topics.yaml  logging_config.yaml  mlflow_config.yaml  redis_config.yaml  training_config.yaml
docs/: architecture.md  deployment_guide.md  performance_report.md
docs/runbooks/: drift_alert_response.md
infra/airflow/: Dockerfile.airflow  docker-compose.airflow.yml
infra/docker/: Dockerfile.ingestion  Dockerfile.mlflow  Dockerfile.serving  Dockerfile.streaming  docker-compose.monitoring.yml  healthcheck.sh
infra/k8s/: namespace.yaml
infra/mlflow/: mlflow.Dockerfile
infra/prometheus/: alertmanager.yml  prometheus.yml
notebooks/: 01_experiment_setup.ipynb  02_feature_exploration.ipynb  03_xgboost_training.ipynb  04_lstm_training.ipynb
plan/: 30_day_plan.json
scripts/: bootstrap_repo.py  daily_automator_free.py  detect_day.py  grafana_import.sh  mutation_test.sh  run_load_test.sh  run_tests.sh  simulate_drift.py  trigger_retraining.py  verify_deployment.py
src/: __init__.py
src/drift/: __init__.py  alert_dispatcher.py  alert_templates.py  drift_config.py  evidently_runner.py  performance_monitor.py  prediction_drift.py  reference_builder.py
src/features/: __init__.py  cache_policy.py  feature_store.py  hrv_calculator.py  materializer.py  redis_client.py  trend_detector.py  window_features.py
src/ingestion/: __init__.py  consumer.py  dlq_handler.py  producer.py  schema_registry.py  schemas.py  simulator.py  topic_admin.py
src/models/: __init__.py  data_pipeline.py  dataset_builder.py  experiment_config.py  explainability.py  feature_engineering.py  hyperparameter_tuner.py  lstm_model.py  lstm_trainer.py  mlflow_client.py  sequence_dataset.py  xgboost_trainer.py
src/monitoring/: __init__.py  metrics.py  prediction_store.py
src/retraining/: __init__.py  champion_challenger.py  dataset_assembler.py  model_promoter.py  model_validator.py
src/serving/: __init__.py  ab_router.py  api.py  canary_manager.py  outcome_ingester.py  prediction_logger.py  prediction_service.py  request_models.py  response_models.py  shadow_logger.py  traffic_controller.py
src/streaming/: __init__.py  agents.py  alert_engine.py  alert_rules.py  app.py  models.py  notifier.py  sinks.py
templates/: code_templates.py
tests/: __init__.py
tests/integration/: __init__.py  drift_simulator.py  (+3 more)
(+34 files in other folders)
