[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-health-mlops"
version = "0.1.0"
description = "Real-Time Smart Health Monitoring System with Drift-Aware ML"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0.2",
    "faust-streaming>=0.10.14",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.2",
    "xgboost>=2.0.2",
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.2",
    "mlflow>=2.9.2",
    "evidently>=0.4.11",
    "apache-airflow>=2.7.3",
    "prometheus-client>=0.19.0",
    "optuna>=3.4.0",
    "shap>=0.43.0",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "asyncpg>=0.29.0",
    "orjson>=3.9.10",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "anthropic>=0.8.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.1",
    "fakeredis>=2.20.0",
    "locust>=2.19.1",
    "black>=23.11.0",
    "ruff>=0.1.7",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "freezegun>=1.3.1",
    "mutmut>=2.4.3",
    "pip-audit>=2.6.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
