[tool.poetry]
name = "smart-health-monitoring"
version = "0.1.0"
description = "A Real-Time Smart Health Monitoring System"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/smart-health-monitoring"
repository = "https://github.com/yourusername/smart-health-monitoring"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
kafka-python = "^2.0.2"
faust = "^1.10.0"
redis = "^4.0.2"
xgboost = "^1.5.0"
torch = "^1.12.0"
mlflow = "^1.24.0"
evidently = "^0.2.0"
apache-airflow = { version = "^2.2.0", extras = ["postgres", "celery"] }

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# 21:31:17 — automated update
"""\ndocs: add CONTRIBUTING.md with git workflow guide\n"""

# 21:31:17 — automated update
# chore: chore: pin all dependency versions in pyproject.toml
